Updated CRM project files